fixed mobile jquery bug, fixed home component spacing from header

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -215,11 +215,18 @@
 	.homeContainer {
 		font-size: 0.8em;
 	}
+	.spacer {
+		width: 100%;
+		height: 60px;
+	}
 }
 
 @media (min-width: 0px) and (max-width: 346px){
 	.homeContainer {
 		font-size: 0.7em;
 	}
+	.spacer {
+		width: 100%;
+		height: 70px;
+	}
 }
-
